--- a/view/m_raihan_al_irsyad.html
+++ b/view/m_raihan_al_irsyad.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>M. Raihan Al Irsyad - Kelompok Kikuk Kikuk</title>
+        <link rel="shortcut icon" href="itskikuk.my.id/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
