Add favicon link to HTML head

--- a/view/rasya_aautar_ramadhani.html
+++ b/view/rasya_aautar_ramadhani.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rasya Aautar Ramadhani - Fotografer & Kreator Imajinatif</title>
+    <link rel="shortcut icon" href="itskikuk.my.id/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
