--- a/view/rizkyan_dwi_fahrizah.html
+++ b/view/rizkyan_dwi_fahrizah.html
@@ -6,6 +6,18 @@
         <title>rizkyan Dwi Fahrizah - Kelompok Kikuk Kikuk</title>
         <link rel="stylesheet" href="../style.css">
     </head>
+        <style>
+            .contact-info a {
+                text-decoration: none;
+                color: white;
+            }
+
+
+            .contact-info a:hover {
+                color: #cccccc;
+                text-decoration: underline;
+            }
+    </style>
     <body>
         <!-- Navigation -->
         <nav>
