Update LinkedIn name formatting in HTML

--- a/view/rizkyan_dwi_fahrizah.html
+++ b/view/rizkyan_dwi_fahrizah.html
@@ -115,8 +115,8 @@
                                         href="mailto:ff29042028@gmail.com">ff29042028@gmail.com</a></p>
                                 <p><strong>LinkedIn: </strong><a
                                         href="https://www.linkedin.com/in/rizkyan-dwi-fahrizah-918452366"
-                                        target="_blank">rizkyan dwi
-                                        fahrizah</a></p>
+                                        target="_blank">Rizkyan Dwi
+                                        Fahrizah</a></p>
                                 <p><strong>Portofolio:</strong> <a
                                         href="http://idwebyik.my.id"
                                         target="_blank">idwebyik.my.id</a></p>
