--- a/view/rizkyan_dwi_fahrizah.html
+++ b/view/rizkyan_dwi_fahrizah.html
@@ -52,7 +52,7 @@
                         <h1>Rizkyan Dwi Fahrizah</h1>
                         <div class="role">IT Support & Network Specialist</div>
                         <p
-                            class="tagline">"Memastikan sistem berjalan, memecahkan masalah adalah seni"</p>
+                            class="tagline">"Memastikan sistem berjalan, memecahkan masalah dengan pengalaman"</p>
                     </div>
 
                     <div class="profile-content">
