--- a/view/rizkyan_dwi_fahrizah.html
+++ b/view/rizkyan_dwi_fahrizah.html
@@ -171,7 +171,7 @@
                                             alt="Rasya Aautar Ramadhani">
                                     </div>
                                     <div class="recommendation-content">
-                                        <h3>Rasya Aautar Ramadhani</h3>
+                                        <h3>Rasya Authar Ramadhani</h3>
                                         <div
                                             class="recommendation-role">Programmer
                                             & Developer</div>
