--- a/view/rasya_aautar_ramadhani.html
+++ b/view/rasya_aautar_ramadhani.html
@@ -34,7 +34,7 @@
                     <img src="../images/anggota/rasya_aautar_ramadhani.jpg" alt="Rasya Aautar Ramadhani">
                 </div>
                 <div class="profile-info">
-                    <h1>Rasya Aautar Ramadhani</h1>
+                    <h1>Rasya Authar Ramadhani</h1>
                     <div class="role">Fotografer & Kreator Imajinatif</div>
                     <p class="tagline">"Setiap foto menyimpan cerita dan imajinasi"</p>
                 </div>
